# claude-howto

./: .markdownlint.json  .pre-commit-config.yaml  CATALOG.md  CATALOG.ru.md  CHANGELOG.md  CHANGELOG.ru.md  CLAUDE.md  CODE_OF_CONDUCT.ru.md  CONTRIBUTING.ru.md  INDEX.md  INDEX.ru.md  LEARNING-ROADMAP.md  LEARNING-ROADMAP.ru.md  QODER_ADAPTATION.md  QODER_IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  QUICK_REFERENCE.ru.md  README.md  README.ru.md  SECURITY.ru.md  STYLE_GUIDE.md  STYLE_GUIDE.ru.md  claude_concepts_guide.md  resources.md
.github/: SECURITY_REPORTING.md  TESTING.ru.md  pull_request_template.ru.md
.github/ISSUE_TEMPLATE/: bug_report.ru.md  documentation.ru.md  feature_request.ru.md  question.ru.md
.github/workflows/: ci.yml  docs-check.yml
01-slash-commands/: README.md  README.ru.md  commit.ru.md  doc-refactor.ru.md  generate-api-docs.ru.md  optimize.ru.md  pr.ru.md  push-all.ru.md  setup-ci-cd.ru.md  unit-test-expand.ru.md
02-memory/: README.md  README.ru.md  directory-api-CLAUDE.ru.md  personal-CLAUDE.ru.md  project-CLAUDE.ru.md
03-skills/: README.md  README.ru.md
03-skills/blog-draft/: SKILL.ru.md
03-skills/brand-voice/: SKILL.ru.md  tone-examples.ru.md
03-skills/claude-md/: SKILL.ru.md
03-skills/code-review/: SKILL.ru.md
03-skills/doc-generator/: SKILL.ru.md
03-skills/refactor/: SKILL.ru.md
04-subagents/: README.md  README.ru.md  clean-code-reviewer.ru.md  code-reviewer.ru.md  data-scientist.ru.md  debugger.ru.md  documentation-writer.ru.md  implementation-agent.ru.md  secure-reviewer.ru.md  test-engineer.ru.md
05-mcp/: README.md  README.ru.md
06-hooks/: README.md  README.ru.md
07-plugins/: README.md  README.ru.md
07-plugins/devops-automation/: README.md  README.ru.md
07-plugins/documentation/: README.md  README.ru.md
07-plugins/pr-review/: README.md  README.ru.md
08-checkpoints/: README.md  README.ru.md  checkpoint-examples.md
09-advanced-features/: README.md  README.ru.md  planning-mode-examples.md
10-cli/: README.md  README.ru.md
ja/01-slash-commands/: README.md
ja/03-skills/: README.md
ja/10-cli/: README.md
qoder-enterprise-system/: .cursorrules  ARCHITECTURE.md  Makefile  PROMPT.md  README.md  USAGE-INSTRUCTIONS.md  package.json
qoder-enterprise-system-py/: README.md  pyproject.toml
qoder-enterprise-system-py/src/qoder_enterprise/: __init__.py  __main__.py
qoder-enterprise-system-py/src/qoder_enterprise/hooks/: __init__.py  api.py  cli.py  executor.py  models.py  parser.py  validator.py
qoder-enterprise-system-py/src/qoder_enterprise/nlp/: __init__.py  api.py  cli.py  models.py  service.py
qoder-enterprise-system-py/workflows/: pre-commit.yaml
qoder-enterprise-system/config/: intents.yaml  mcp-servers.json  qoder.yaml
qoder-enterprise-system/examples/: README.md
qoder-enterprise-system/scripts/: install.sh  setup-qoder.sh
scripts/: build_epub.py  check_cross_references.py  check_links.py  check_mermaid.py  sync_translations.py
uk/: README.md
uk/03-skills/: README.md
vi/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STYLE_GUIDE.md
zh/: README.md
(+87 files in other folders)
